# specurityintel

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  README.md  UAM-Compliance-PRD-V2.md  debug_failed_attempts.py  debug_kpi.py  deploy.py  pyproject.toml  requirements.txt
config/: notifications.yaml  thresholds.yaml
docker/: Dockerfile  docker-compose.yml
docs/: TECHNICAL_ARCHITECTURE.md  USER_GUIDE.md
metrics/: baseline_20251103_070413.json  false_positive_analysis_20251103_070501.json  false_positive_analysis_20251103_070509.json
openspec/changes/implement-uam-poc/: design.md  proposal.md  tasks.md
recommendations/: alternative-design.md  alternative-plan.md
recommendations/dummydata/: README.md
scripts/: analyze_false_positives.py  baseline_metrics.py  collect_baseline_metrics.py  simple_baseline.py
src/: composition_root.py  main.py
src/adapters/: audit.py  clock.py  email_adapter.py  openai_adapter.py  slack_adapter.py
src/adapters/storage/: __init__.py  encrypted.py  in_memory.py  jsonl.py
src/interfaces/: dto.py  errors.py  ports.py
src/modules/ai/: analyzer.py
src/modules/alerting/: generator.py
src/modules/config/: loader.py  validator.py
src/modules/ingestion/: parser.py
src/orchestration/: __init__.py  prefect_flows.py  scheduler.py
tests/integration/: mock_adapters.py  test_pipeline.py
tests/performance/: test_scale.py
tests/unit/: test_dto.py  test_dto_contracts.py  test_encrypted_storage.py  test_enhanced_audit_logger.py  test_graceful_degradation.py  test_kpi_calculators.py
(+9 files in other folders)
